# agent-hook-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_hook_lens/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
tests/fixtures/: risky-settings.json  safe-settings.json
