[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-hook-lens"
version = "0.1.0"
description = "Local-first risk scanner for AI coding-agent hook configurations."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Kuro", email = "thecatnamedkuro@gmail.com" }]
keywords = ["ai-agents", "claude-code", "hooks", "security", "devtools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/thecatnamedkuro/agent-hook-lens"
Repository = "https://github.com/thecatnamedkuro/agent-hook-lens"
Issues = "https://github.com/thecatnamedkuro/agent-hook-lens/issues"

[project.scripts]
agent-hook-lens = "agent_hook_lens.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
